--- a/aml2022_report.ipynb
+++ b/aml2022_report.ipynb
@@ -1,27 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "name": "aml2022_report.ipynb",
-      "provenance": [],
-      "collapsed_sections": [],
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/aya-se/advanced-machine-learning-2022/blob/main/aml2022_report.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -29,6 +12,9 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "-z-I39fBi1MD"
+      },
       "source": [
         "# Advanced Machine Learning (2022) Final Report Assignment\n",
         "\n",
@@ -88,164 +74,337 @@
         "to the CNN model, and answer the following questions.\n",
         "\n",
         "**(1)** Find the value of the vector $\\boldsymbol{x}_{3:4}$."
-      ],
-      "metadata": {
-        "id": "-z-I39fBi1MD"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 65,
+      "metadata": {},
+      "outputs": [],
       "source": [
-        ""
+        "# 必要ライブラリのインポート\n",
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "import matplotlib.pyplot as plt"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 66,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "(array([[-3., -2., -1., -1., -2., -3.],\n",
+              "        [ 3.,  2.,  3.,  2.,  3.,  2.]]),\n",
+              " array([[-0.2],\n",
+              "        [ 0.1]]),\n",
+              " array([[-1.],\n",
+              "        [ 2.]]),\n",
+              " array([[-0.3,  0. ,  0.1,  0. ,  0. ],\n",
+              "        [-0.2, -0.1,  0. ,  0.1,  0. ],\n",
+              "        [-0.1, -0.2,  0.1,  0. ,  0.1]]),\n",
+              " 3,\n",
+              " 2,\n",
+              " 2)"
+            ]
+          },
+          "execution_count": 66,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
       ],
+      "source": [
+        "# 各種変数の準備\n",
+        "W = np.array([[-3.0, -2.0, -1.0, -1.0, -2.0, -3.0], [3.0, 2.0, 3.0, 2.0, 3.0, 2.0]])\n",
+        "b = np.array([[-0.2], [0.1]])\n",
+        "v = np.array([[-1.0], [2.0]])\n",
+        "X = np.array([[-0.3, 0, 0.1, 0, 0], [-0.2, -0.1, 0, 0.1, 0], [-0.1, -0.2, 0.1, 0, 0.1]])\n",
+        "W, b, v, X, d, m, delta"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 67,
       "metadata": {
         "id": "uec36GNAyNdz"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "array([0.1, 0. , 0.1, 0. , 0.1, 0. ])"
+            ]
+          },
+          "execution_count": 67,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "# x_{3:4}\n",
+        "np.concatenate([X[:, 2], X[:, 3]])"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "**(2)** Find the values of the hidden vectors $\\boldsymbol{c}_1, \\boldsymbol{c}_2, \\boldsymbol{c}_3, \\boldsymbol{c}_4$."
-      ],
       "metadata": {
         "id": "7XCf-KoPyOfp"
-      }
+      },
+      "source": [
+        "**(2)** Find the values of the hidden vectors $\\boldsymbol{c}_1, \\boldsymbol{c}_2, \\boldsymbol{c}_3, \\boldsymbol{c}_4$."
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        ""
-      ],
+      "execution_count": 68,
       "metadata": {
         "id": "sgxmns3JyQgB"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "(array([[2.],\n",
+              "        [0.]]),\n",
+              " array([[0.],\n",
+              "        [0.]]),\n",
+              " array([[0.],\n",
+              "        [1.]]),\n",
+              " array([[0. ],\n",
+              "        [0.5]]))"
+            ]
+          },
+          "execution_count": 68,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "# コンテキストベクトルc_tの計算\n",
+        "def c(t) :\n",
+        "    val = (W @ np.concatenate([X[:, t], X[:, t+1]])).reshape(2, 1) + b\n",
+        "    return np.maximum(0, val)\n",
+        "\n",
+        "c(0), c(1), c(2), c(3)"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "**(3)** Find the value of the vector $\\boldsymbol{s}$.\n"
-      ],
       "metadata": {
         "id": "kVFqVPWPyQ58"
-      }
+      },
+      "source": [
+        "**(3)** Find the value of the vector $\\boldsymbol{s}$.\n"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        ""
-      ],
+      "execution_count": 111,
       "metadata": {
         "id": "Vt3UQqqAyTVj"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "array([[2.],\n",
+              "       [1.]])"
+            ]
+          },
+          "execution_count": 111,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "s = np.max(np.hstack([c(0), c(1), c(2), c(3)]), axis=1)\n",
+        "s.reshape(2, 1)"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "**(4)** Find the value of $p$."
-      ],
       "metadata": {
         "id": "Kt26e_TSyT6W"
-      }
+      },
+      "source": [
+        "**(4)** Find the value of $p$."
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        ""
-      ],
+      "execution_count": 112,
       "metadata": {
         "id": "U4g6j4L3y635"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "0.5000000000000002"
+            ]
+          },
+          "execution_count": 112,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "def sigmoid(x):\n",
+        "    return 1 / (1 + np.exp(-x))\n",
+        "\n",
+        "p = sigmoid(v.T @ s)[0]\n",
+        "p"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "**(5)** Write the formula of the binary cross-entropy loss between the correct label $y$ and the probability estimate $p$."
-      ],
       "metadata": {
         "id": "fUh6ZlAqyWRE"
-      }
+      },
+      "source": [
+        "**(5)** Write the formula of the binary cross-entropy loss between the correct label $y$ and the probability estimate $p$."
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        ""
-      ],
+      "execution_count": 113,
       "metadata": {
         "id": "QdCPWs4UyV9b"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "# 注：p=0,1の時の処理は省略する\n",
+        "def BCE(y, p):\n",
+        "    return -(y * np.log(p) + (1-y) * np.log(1-p)) "
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "**(6)** Compute the loss value by using the formula of (5) for the training instance."
-      ],
       "metadata": {
         "id": "p9WQToWfyYuj"
-      }
+      },
+      "source": [
+        "**(6)** Compute the loss value by using the formula of (5) for the training instance."
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        ""
-      ],
+      "execution_count": 114,
       "metadata": {
         "id": "LsFTKdK3zpYC"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "0.6931471805599457"
+            ]
+          },
+          "execution_count": 114,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "loss = BCE(0, p)\n",
+        "loss"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "**(7)** Compute the gradient of the loss function with respect to $\\boldsymbol{v}$ for the training instance."
-      ],
       "metadata": {
         "id": "6b03t2amzpz5"
-      }
+      },
+      "source": [
+        "**(7)** Compute the gradient of the loss function with respect to $\\boldsymbol{v}$ for the training instance."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "負例の場合の勾配は、$\\displaystyle\\frac{\\partial BCE(p)}{\\partial v}=\\frac{1}{1-p}\\cdot p(1-p)\\cdot s$と求まることから、以下のように計算できる。"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        ""
-      ],
+      "execution_count": 115,
       "metadata": {
         "id": "Oa0xGZNgz7bY"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "array([[1. ],\n",
+              "       [0.5]])"
+            ]
+          },
+          "execution_count": 115,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "grad_v = 1/(1-p) * p * (1-p) * s\n",
+        "grad_v.reshape(2, 1)"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "**(8)** Compute the gradients of the loss function with respect to $\\boldsymbol{W}$ for the training instance."
-      ],
       "metadata": {
         "id": "CTt2o7hKz7zD"
-      }
+      },
+      "source": [
+        "**(8)** Compute the gradients of the loss function with respect to $\\boldsymbol{W}$ for the training instance."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "(7)と同様にして誤差逆伝播法で、勾配を計算"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        ""
-      ],
+      "execution_count": 129,
       "metadata": {
         "id": "0mz0yeWF0PIy"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[[-0.3 -0.2 -0.1  0.  -0.1 -0.2]\n",
+            " [ 0.1  0.   0.1  0.   0.1  0. ]]\n"
+          ]
+        },
+        {
+          "data": {
+            "text/plain": [
+              "array([[ 0.15,  0.1 ,  0.05, -0.  ,  0.05,  0.1 ],\n",
+              "       [ 0.1 ,  0.  ,  0.1 ,  0.  ,  0.1 ,  0.  ]])"
+            ]
+          },
+          "execution_count": 129,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "grad_W = 1/(1-p) * p * (1-p) * v * np.array([np.concatenate([X[:, 0], X[:, 0+1]]), np.concatenate([X[:, 2], X[:, 2+1]])])\n",
+        "grad_W"
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "rPWwlW4F0P0i"
+      },
       "source": [
         "## Question 2 (20 points)\n",
         "\n",
@@ -254,43 +413,39 @@
         "+ Brief explanation of the task for the evaluation.\n",
         "+ Statistics of the dataset (e.g., the number of instances)\n",
         "+ Measure(s) for evaluating the quality"
-      ],
-      "metadata": {
-        "id": "rPWwlW4F0P0i"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        ""
-      ],
       "metadata": {
         "id": "XdNBHor63biK"
-      }
+      },
+      "source": []
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "xYrvAyBW3TxD"
+      },
       "source": [
         "## Question 3 (20 points)\n",
         "\n",
         "Explain two reasons why Transformers are superior to Recurrent Neural Network\n",
         "(RNN) in sequence-to-sequence tasks such as Machine Translation."
-      ],
-      "metadata": {
-        "id": "xYrvAyBW3TxD"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        ""
-      ],
       "metadata": {
         "id": "CqfAdU713cYa"
-      }
+      },
+      "source": []
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "YYxI86gA3dGs"
+      },
       "source": [
         "## Question 4 (10 points)\n",
         "\n",
@@ -301,21 +456,42 @@
         "    + https://huggingface.co/rinna/japanese-gpt-1b\n",
         "    + https://huggingface.co/facebook/blenderbot-400M-distill\n",
         "+ The task addressed by the model (e.g., \"text generation\", \"summarization\", \"chatbot\")\n"
-      ],
-      "metadata": {
-        "id": "YYxI86gA3dGs"
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        ""
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "uCaAqhtCGC2I"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": []
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "collapsed_sections": [],
+      "include_colab_link": true,
+      "name": "aml2022_report.ipynb",
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.8.3"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
