--- a/aml2022_report.ipynb
+++ b/aml2022_report.ipynb
@@ -412,7 +412,18 @@
       "metadata": {
         "id": "XdNBHor63biK"
       },
-      "source": []
+      "source": [
+        "### Natural Questions\n",
+        "- いわゆる、**オープンドメインの質問応答** (Open-Domain Question Answering) と呼ばれるタスクの代表的なデータセットの1つである。与えられた質問文に対する回答を、WikipediaなどのWeb文書上から探し出して回答する。一般に、Retriever(検索器)モデルで回答の証拠となりそうな文書を抽出し、それをもとにGenerator(生成器)やReader(スパン抽出器)で最終的な回答を生成したり、文書中から抽出したりする。これらのあらゆる過程で単語埋め込みの品質は重要となる。\n",
+        "- 学習データ：307,373個 / 検証データ：7,830 examples / テストデータ：7,842個\n",
+        "- Natural Questionsを含む、一般的なQAは回答が短答式であるため、参照回答と予測回答との**完全一致**(Exact Match・EM)をベースに評価することが基本となっている。\n",
+        "\n",
+        "### QMSum\n",
+        "- 比較的新しい**要約**データセットの1つであり、議事録形式であること、さらにクエリ指向型であることが特徴である。一般的な要約タスクは、ある文書全体の要約を作成することが目標であるが、クエリ指向型要約では、特定のクエリ(質問・お題)に沿った要約を作成することが求められる (例：「Aさんは今期の売上業績についてどのような意見を述べていますか？」など)。また、議事録は対話データであり、一般的な文書データよりも合計トークン数が多い、対話特有の構造や談話内容の理解が難しい、などの性質から、QMSumは多くの要約データセットの中でもタスクとしての難易度が高い部類に相当すると考えられる。\n",
+        "- 学習データ：1,257個 / 検証データ：272個 / テストデータ：279個 (※クエリとソース文のペアでカウント)\n",
+        "- データ数自体はかなり少ないが、1つ1つの会議の平均トークン長は9,069.8であり、非常に長い\n",
+        "- QMSumを含む、一般的な要約タスクは、参照回答と予測回答との**ROUGE**スコアで評価することが基本となっている。これは両者間の語彙重複を評価する指標であり、**ROUGE-1・ROUGE-2・ROUGE-L・ROUGE-Lsum**などの種類がある。ただし、ROUGEスコアのみだと、実際の生成文の流暢性・事実への忠実性・情報量などの観点での評価ができないため、自動評価に加えて、**人間による評価**を合わせて実施することも多い。\n"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -425,6 +436,11 @@
         "Explain two reasons why Transformers are superior to Recurrent Neural Network\n",
         "(RNN) in sequence-to-sequence tasks such as Machine Translation."
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": []
     },
     {
       "cell_type": "markdown",
