--- a/aml2022_report.ipynb
+++ b/aml2022_report.ipynb
@@ -440,14 +440,18 @@
     {
       "cell_type": "markdown",
       "metadata": {},
-      "source": []
+      "source": [
+        "RNNでは時系列データの直前までの情報を1つの隠れベクトルとして埋め込むことになるが、これに埋め込むことのできる情報量は限界がある。また、モデルの構造上、遠いトークン間の情報はどうしても伝達に難がある。一方でTransformerの場合は、基本的に全てのトークン対についてAttentionメカニズムで情報を伝達できるため、遠いトークン間を含めて、より豊富な情報量を表現することが可能である。自然言語処理では、長距離の文脈を考慮しなければならないようなタスクも多いため、そのような場合には特に、TransformerはRNNに対する高い優位性を持つと考えられる。"
+      ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
         "id": "CqfAdU713cYa"
       },
-      "source": []
+      "source": [
+        "RNNはある時刻上での隠れベクトルを逐次的に計算していく必要があるが、GPUの並列化によって計算時間を短縮することが重要となる深層学習において、この性質は非常にネックである。一方でTransformerは少なくとも学習時であれば、全てのAttentionの計算は独立に行えるため、計算の並列化が行いやすい。従って計算の並列化の面でも、TransformerはRNNに対する優位性があるといえる。(ただし、TransformerのAttentionも入力長に対して$O(N^2)$の計算量・メモリが必要となるため、非常に長い入力を扱う際には工夫が必要となる。)"
+      ]
     },
     {
       "cell_type": "markdown",
