--- a/aml2022_report.ipynb
+++ b/aml2022_report.ipynb
@@ -471,13 +471,47 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "HuggingFaceのBARTに岡崎研究室の紹介文を流し込んだだけ。"
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 137,
       "metadata": {
         "id": "uCaAqhtCGC2I"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "Truncation was not explicitly activated but `max_length` is provided a specific value, please use `truncation=True` to explicitly truncate examples to max length. Defaulting to 'longest_first' truncation strategy. If you encode pairs of sequences (GLUE-style) with the tokenizer you can select this strategy more precisely by providing a specific strategy to `truncation`.\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "['Okazaki Laboratory focuses on Natural Language']\n"
+          ]
+        }
+      ],
+      "source": [
+        "from transformers import BartTokenizer, BartForConditionalGeneration, BartConfig\n",
+        "\n",
+        "model = BartForConditionalGeneration.from_pretrained('facebook/bart-large')\n",
+        "tokenizer = BartTokenizer.from_pretrained('facebook/bart-large')\n",
+        "\n",
+        "ARTICLE_TO_SUMMARIZE = \"Okazaki Laboratory focuses on Natural Language Processing (NLP), computers that manipulate human languages, and aims to realize Artificial Intelligence (AI). For example, we are exploring principles and methods to realize intelligent communication on computers, such as translating foreign language texts, communicating with humans, answering questions, and explaining scenes. We adopt cutting-edge approaches such as deep learning as well as the fundamentals of linguistics, statistics, and machine learning. In addition, we are also interested in developing real-world applications of our research, for example, social listening using big data analysis.\"\n",
+        "inputs = tokenizer([ARTICLE_TO_SUMMARIZE], max_length=1024, return_tensors='pt')\n",
+        "\n",
+        "# Generate Summary\n",
+        "summary_ids = model.generate(inputs['input_ids'], num_beams=32, max_length=10, early_stopping=True)\n",
+        "print([tokenizer.decode(g, skip_special_tokens=True, clean_up_tokenization_spaces=False) for g in summary_ids])"
+      ]
     }
   ],
   "metadata": {
