--- a/aml2022_report.ipynb
+++ b/aml2022_report.ipynb
@@ -78,7 +78,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 65,
+      "execution_count": 1,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -90,7 +90,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 66,
+      "execution_count": 2,
       "metadata": {},
       "outputs": [
         {
@@ -104,13 +104,10 @@
               "        [ 2.]]),\n",
               " array([[-0.3,  0. ,  0.1,  0. ,  0. ],\n",
               "        [-0.2, -0.1,  0. ,  0.1,  0. ],\n",
-              "        [-0.1, -0.2,  0.1,  0. ,  0.1]]),\n",
-              " 3,\n",
-              " 2,\n",
-              " 2)"
+              "        [-0.1, -0.2,  0.1,  0. ,  0.1]]))"
             ]
           },
-          "execution_count": 66,
+          "execution_count": 2,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -121,12 +118,12 @@
         "b = np.array([[-0.2], [0.1]])\n",
         "v = np.array([[-1.0], [2.0]])\n",
         "X = np.array([[-0.3, 0, 0.1, 0, 0], [-0.2, -0.1, 0, 0.1, 0], [-0.1, -0.2, 0.1, 0, 0.1]])\n",
-        "W, b, v, X, d, m, delta"
+        "W, b, v, X"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 67,
+      "execution_count": 3,
       "metadata": {
         "id": "uec36GNAyNdz"
       },
@@ -137,7 +134,7 @@
               "array([0.1, 0. , 0.1, 0. , 0.1, 0. ])"
             ]
           },
-          "execution_count": 67,
+          "execution_count": 3,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -158,7 +155,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 68,
+      "execution_count": 4,
       "metadata": {
         "id": "sgxmns3JyQgB"
       },
@@ -176,7 +173,7 @@
               "        [0.5]]))"
             ]
           },
-          "execution_count": 68,
+          "execution_count": 4,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -201,7 +198,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 111,
+      "execution_count": 5,
       "metadata": {
         "id": "Vt3UQqqAyTVj"
       },
@@ -213,7 +210,7 @@
               "       [1.]])"
             ]
           },
-          "execution_count": 111,
+          "execution_count": 5,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -234,7 +231,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 112,
+      "execution_count": 6,
       "metadata": {
         "id": "U4g6j4L3y635"
       },
@@ -245,7 +242,7 @@
               "0.5000000000000002"
             ]
           },
-          "execution_count": 112,
+          "execution_count": 6,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -269,7 +266,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 113,
+      "execution_count": 7,
       "metadata": {
         "id": "QdCPWs4UyV9b"
       },
@@ -291,7 +288,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 114,
+      "execution_count": 8,
       "metadata": {
         "id": "LsFTKdK3zpYC"
       },
@@ -302,7 +299,7 @@
               "0.6931471805599457"
             ]
           },
-          "execution_count": 114,
+          "execution_count": 8,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -330,7 +327,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 115,
+      "execution_count": 9,
       "metadata": {
         "id": "Oa0xGZNgz7bY"
       },
@@ -342,7 +339,7 @@
               "       [0.5]])"
             ]
           },
-          "execution_count": 115,
+          "execution_count": 9,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -370,7 +367,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 130,
+      "execution_count": 10,
       "metadata": {
         "id": "0mz0yeWF0PIy"
       },
@@ -382,7 +379,7 @@
               "       [ 0.1 ,  0.  ,  0.1 ,  0.  ,  0.1 ,  0.  ]])"
             ]
           },
-          "execution_count": 130,
+          "execution_count": 10,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -441,7 +438,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "RNNでは時系列データの直前までの情報を1つの隠れベクトルとして埋め込むことになるが、これに埋め込むことのできる情報量は限界がある。また、モデルの構造上、遠いトークン間の情報はどうしても伝達に難がある。一方でTransformerの場合は、基本的に全てのトークン対についてAttentionメカニズムで情報を伝達できるため、遠いトークン間を含めて、より豊富な情報量を表現することが可能である。自然言語処理では、長距離の文脈を考慮しなければならないようなタスクも多いため、そのような場合には特に、TransformerはRNNに対する高い優位性を持つと考えられる。"
+        "- RNNでは時系列データの直前までの情報を1つの隠れベクトルとして埋め込むことになるが、これに埋め込むことのできる情報量は限界がある。また、モデルの構造上、遠いトークン間の情報はどうしても伝達に難がある。一方でTransformerの場合は、基本的に全てのトークン対についてAttentionメカニズムで情報を伝達できるため、遠いトークン間を含めて、より豊富な情報量を表現することが可能である。自然言語処理では、長距離の文脈を考慮しなければならないようなタスクも多いため、そのような場合には特に、TransformerはRNNに対する高い優位性を持つと考えられる。"
       ]
     },
     {
@@ -450,7 +447,7 @@
         "id": "CqfAdU713cYa"
       },
       "source": [
-        "RNNはある時刻上での隠れベクトルを逐次的に計算していく必要があるが、GPUの並列化によって計算時間を短縮することが重要となる深層学習において、この性質は非常にネックである。一方でTransformerは少なくとも学習時であれば、全てのAttentionの計算は独立に行えるため、計算の並列化が行いやすい。従って計算の並列化の面でも、TransformerはRNNに対する優位性があるといえる。(ただし、TransformerのAttentionも入力長に対して$O(N^2)$の計算量・メモリが必要となるため、非常に長い入力を扱う際には工夫が必要となる。)"
+        "- RNNはある時刻上での隠れベクトルを逐次的に計算していく必要があるが、GPUの並列化によって計算時間を短縮することが重要となる深層学習において、この性質は非常にネックである。一方でTransformerは少なくとも学習時であれば、全てのAttentionの計算は独立に行えるため、計算の並列化が行いやすい。従って計算の並列化の面でも、TransformerはRNNに対する優位性があるといえる。(ただし、TransformerのAttentionも入力長に対して$O(N^2)$の計算量・メモリが必要となるため、非常に長い入力を扱う際には工夫が必要となる。)"
       ]
     },
     {
@@ -479,38 +476,70 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 137,
-      "metadata": {
-        "id": "uCaAqhtCGC2I"
-      },
+      "execution_count": 13,
+      "metadata": {},
       "outputs": [
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "Truncation was not explicitly activated but `max_length` is provided a specific value, please use `truncation=True` to explicitly truncate examples to max length. Defaulting to 'longest_first' truncation strategy. If you encode pairs of sequences (GLUE-style) with the tokenizer you can select this strategy more precisely by providing a specific strategy to `truncation`.\n"
-          ]
-        },
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "['Okazaki Laboratory focuses on Natural Language']\n"
+            "vocab_file vocab.json\n",
+            "merges_file merges.txt\n",
+            "tokenizer_file tokenizer.json\n",
+            "added_tokens_file added_tokens.json\n",
+            "special_tokens_map_file special_tokens_map.json\n",
+            "tokenizer_config_file tokenizer_config.json\n"
           ]
+        },
+        {
+          "data": {
+            "text/plain": [
+              "[{'summary_text': 'The students joined the laboratory to acquire skills through research activities and make a confident start as a member of society in the future. The laboratory has diverse people with various hobbies, skills, and thoughts. They respect the individuality of each member, learn from others, and have fun together.'}]"
+            ]
+          },
+          "execution_count": 13,
+          "metadata": {},
+          "output_type": "execute_result"
         }
       ],
       "source": [
-        "from transformers import BartTokenizer, BartForConditionalGeneration, BartConfig\n",
+        "# HuggingFaceから要約用にファインチューニングされたBARTの生成モデルを使用\n",
+        "# https://huggingface.co/philschmid/bart-large-cnn-samsum\n",
+        "from transformers import pipeline\n",
+        "summarizer = pipeline(\"summarization\", model=\"philschmid/bart-large-cnn-samsum\")\n",
         "\n",
-        "model = BartForConditionalGeneration.from_pretrained('facebook/bart-large')\n",
-        "tokenizer = BartTokenizer.from_pretrained('facebook/bart-large')\n",
+        "ARTICLE_TO_SUMMARIZE = \"We hope the students joined the laboratory to acquire skills through research activities and make a confident start as a member of society in the future. \\\n",
+        "                        Once you start working in the community, you are not only required to solve the problem of your clients or others, \\\n",
+        "                        but also to spot or suggest a potential issue which even the client doesn’t notice. When you write a bachelor/master thesis, \\\n",
+        "                        you also need to explore the unsolved problems by yourself, address them by all possible means to search for a solution, and give your findings back to the society. \\\n",
+        "                        Through your research, you can acquire abilities to establish your specialty as if building your castle, to complete theories/works, and to appeal to others, \\\n",
+        "                        which would be useful anywhere in the society. There is always someone who has been conducting a related study in the world. \\\n",
+        "                        Whenever you advance your research, you will face challenges from the world. For this reason, even when you write a bachelor/master thesis, \\\n",
+        "                        you should set the research topic bearing in mind the need to present the findings of your research in international conferences or journals. \\\n",
+        "                        The laboratory has diverse people with various hobbies, skills, and thoughts; we respect the individuality of each member, learn from others, and have fun together. \\\n",
+        "                        We hope that your experiences in the laboratory will be invaluable for the rest of your lives.\"\n",
         "\n",
-        "ARTICLE_TO_SUMMARIZE = \"Okazaki Laboratory focuses on Natural Language Processing (NLP), computers that manipulate human languages, and aims to realize Artificial Intelligence (AI). For example, we are exploring principles and methods to realize intelligent communication on computers, such as translating foreign language texts, communicating with humans, answering questions, and explaining scenes. We adopt cutting-edge approaches such as deep learning as well as the fundamentals of linguistics, statistics, and machine learning. In addition, we are also interested in developing real-world applications of our research, for example, social listening using big data analysis.\"\n",
-        "inputs = tokenizer([ARTICLE_TO_SUMMARIZE], max_length=1024, return_tensors='pt')\n",
+        "summarizer(ARTICLE_TO_SUMMARIZE)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### (参考)日本語訳\n",
+        "#### 原文\n",
+        "研究室には、研究活動を通じてスキルを身につけ、将来、社会人として自信を持ってスタートできるような人材を求めて入室してもらいました。社会で仕事をするようになると、クライアントなどの問題を解決するだけでなく、クライアントも気づいていない潜在的な問題を発見し、提案することが求められます。また、学士・修士論文では、未解決の問題を自ら掘り起こし、あらゆる手段を使って解決策を模索し、その成果を社会に還元することが求められます。研究を通して、自分の城を築くように専門性を確立し、理論や作品を完成させ、社会にアピールする能力を身につけることができ、それは社会のどこでも通用するものです。\n",
         "\n",
-        "# Generate Summary\n",
-        "summary_ids = model.generate(inputs['input_ids'], num_beams=32, max_length=10, early_stopping=True)\n",
-        "print([tokenizer.decode(g, skip_special_tokens=True, clean_up_tokenization_spaces=False) for g in summary_ids])"
+        "世の中には、必ず関連する研究をしている人がいます。研究を進めると、必ず世の中の課題に直面する。ですから、学士・修士論文を書く場合でも、研究成果を国際会議や学術誌で発表することを念頭に置いて、研究テーマを設定する必要があります。\n",
+        "\n",
+        "研究室には、様々な趣味、技術、考えを持った人が集まっており、それぞれの個性を尊重し、他者から学び、共に楽しむことができます。研究室での経験が、皆さんの生涯に渡ってかけがえのないものになることを願っています。\n",
+        "\n",
+        "#### 要約結果\n",
+        "研究活動を通じて技術を身につけ、将来、社会人として自信を持ってスタートを切るために、研究室に入りました。研究室には、さまざまな趣味や特技、考えを持った人が集まっています。それぞれの個性を尊重し、他者から学び、共に楽しみます。\n",
+        "\n",
+        "---\n",
+        "\n",
+        "ちょっとニュアンスが怪しいが、まぁだいだい妥当な要約にはなっている。\n"
       ]
     }
   ],
